--- a/css/styles.css
+++ b/css/styles.css
@@ -2,19 +2,29 @@ html, body {
   height: 100%;
 }
 
-.height-400 {
-  background-color: navy;
-  height: 300px;
+.height-300 {
+  background-color: #375172;
+  height: 200px;
+}
+
+.height-200 {
+  background-color: #fff;
+  height: 110px;
 }
 h1, h2 {
-  color: #fff;
+  color: #99badd;
   font-family: "Arial Black", Gadget, sans-serif;
 }
 
 .margin-top {
   margin-top: 20px;
 }
-
+img {
+  width: 100%;
+  height: auto;
+  max-width: 370px;
+  min-width: 210px;
+}
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
   .coming-soon {
@@ -31,7 +41,7 @@ h1, h2 {
 @media (min-width: 992px) and (max-width: 1199px) {
   .coming-soon {
     font-size: 50px;
-    margin-bottom: 10px;
+    margin: 0 0 10px 0;
   }
   .negative-margin-top {
     margin-top: -185px;
@@ -43,7 +53,7 @@ h1, h2 {
 @media (min-width: 768px) and (max-width: 991px) {
   .coming-soon {
     font-size: 30px;
-    margin: 40px 0 10px 0;
+    margin: 10px 0 10px 0;
   }
   .negative-margin-top {
     margin-top: -185px;
@@ -65,7 +75,7 @@ h1, h2 {
 @media (max-width: 480px) {
   .coming-soon {
     font-size: 20px;
-    margin: 45px 0 10px 0;
+    margin: 5px 0 10px 0;
   }
   .negative-margin-top {
     margin-top: -230px;
