contact form styling update for contact info

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,34 +81,57 @@ h1, h2 {
 
 
 /***   Contact Styles  ***/
+.contact {
+  background: #cbd7e6;
+  background: -moz-radial-gradient(center, ellipse cover,  #cbd7e6 0%, #cbd7e6 89%, #537bac 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#cbd7e6), color-stop(89%,#cbd7e6), color-stop(100%,#537bac));
+  background: -webkit-radial-gradient(center, ellipse cover,  #cbd7e6 0%,#cbd7e6 89%,#537bac 100%);
+  background: -o-radial-gradient(center, ellipse cover,  #cbd7e6 0%,#cbd7e6 89%,#537bac 100%);
+  background: -ms-radial-gradient(center, ellipse cover,  #cbd7e6 0%,#cbd7e6 89%,#537bac 100%);
+  background: radial-gradient(ellipse at center,  #cbd7e6 0%,#cbd7e6 89%,#537bac 100%);
+  background-size: 10px 10px;
+}
+.contact .container {
+  width: inherit;
+  height: inherit;
+  background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.55) 0%, rgba(255,255,255,0) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.55)), color-stop(100%,rgba(255,255,255,0)));
+  background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%);
+  background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%);
+  background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%);
+  background: radial-gradient(ellipse at center,  rgba(255,255,255,0.55) 0%,rgba(255,255,255,0) 100%);
+}
+
 .contact .section-heading {
+  color: #375172;
   text-transform: uppercase;
+  margin-bottom: 30px;
 }
-/*.contact-icons {
-  padding: 5px 0 5px 0;
+.contact .section-subheading {
+  margin-bottom: 30px;
 }
-
-.contact-content {
-  margin-left: -15px;
-  line-height: 15px;
+.contact-block-heading {
+  color: #375172;
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 5px;
 }
-
-.contact-content .contact-address {
-  margin-bottom: 16px;
+.contact-info .leftblock {
+  float: left;
+  width: 15%;
+  text-align: center;
 }
-
-.contact-content .contact-phone {
-  margin-bottom: 20px;
+.contact-info .leftblock .badge {
+  background-color: #375172;
+  color: #fff;
 }
-
-.contact-content .contact-fax {
-  margin-bottom: 28px;
+.contact-info .rightblock {
+  border-bottom: 1px solid #ccc;
+  font-size: 14px;
+  float: left;
+  width: 85%;
+  margin-bottom: 10px;
 }
-
-.submit-btn {
-  float: right;
-}*/
-
 
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
